--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../pages/normalize.css">
     <link rel="stylesheet" href="../pages/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,700;1,700&family=Red+Hat+Text:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+
     <title>Travel</title>
     <link rel="shortcut icon" type="image/svg" href="../assets/favicon.ico">
 </head>
