--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,700;1,700&family=Red+Hat+Text:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
-
     <title>Travel</title>
     <link rel="shortcut icon" type="image/svg" href="../assets/favicon.ico">
 </head>
@@ -48,6 +47,72 @@
         </div>
     </header>
     <main class="main">
+        <section class="preview">
+            <div class="wrapper">
+                <h1 class= "preview__title">Explore the beauty of the World</h1>
+                <p class="preview__subtitle">Receive personalized recommendations for countries,hotels, activities and more</p>
+                <form method="get" class="preview__form">
+                    <input class="form__input" type="text" name="user-input-field" placeholder="What would you like to do?">
+                    <button class="button form__button">Start Planning</button>
+                </form>
+            </div>
+        </section>
+        <section class="steps">
+            <div class="wrapper">
+                <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
+                <div class="steps_card">
+                    <img src="../assets/svg/frame1.svg" class="card__icon" alt="icon">
+                    <p class="card__text">Tell us what you want to do</p>
+                </div>
+                <div class="steps_card">
+                    <img src="../assets/svg/frame2.svg" class="card__icon" alt="icon">
+                    <p class="card__text">Share us preferable dates</p>
+                </div>
+                <div class="steps_card">
+                    <img src="../assets/svg/frame3.svg" class="card__icon" alt="icon">
+                    <p class="card__text">We will give you recommendations</p>
+                </div>
+            </div>
+        </section>
+        <section class="destinations">
+            <div class="wrapper">
+                <h2 class="destinations__title">POPULAR DESTINATIONS</h2>
+                <div class="destinations__conteiner">
+                    <div class="destinations__banner">
+                        <div class="banner__content">
+                            <img src="../assets/img/desktop/desk_destinations_spain.png" class="banner__img-desk" alt="spain">
+                            <div class="banner__subtittle">SPAIN</div>
+                        </div>
+                        <div class="banner__content">
+                            <img src="../assets/img/desktop/desk_destinations_japan.png" class="banner__img-desk" alt="japan">
+                            <div class="banner__subtittle">JAPAN</div>
+                        </div>
+                        <div class="banner__content">
+                            <img src="../assets/img/desktop/desk_destinations_usa.png" class="banner__img-desk" alt="usa">
+                            <div class="banner__subtittle">USA</div>
+                        </div>
+                    </div>
+                    <div class="banner__carousel">
+                        <input id="carousel__item-1" type="radio" name="carousel-dots">
+                        <label for="carousel__item-1"></label>
+                        <input id="carousel__item-2" type="radio" name="carousel-dots" checked>
+                        <label for="carousel__item-2"></label>
+                        <input id="carousel__item-3" type="radio" name="carousel-dots"> 
+                        <label for="carousel__item-3"></label>
+                    </div>
+                    <button class="destinations__button button button__arrow">
+                        <img src="../assets/svg/arrow-right.svg" class="arrow" alt="arrow">
+                        Find More
+                    </button>
+                </div>
+
+
+
+
+            </div>
+
+        </section>
+
 
     </main>
     <footer class="footer"></footer>
