feat: new section

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../pages/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,700;1,700&family=Red+Hat+Text:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
     <title>Travel</title>
     <link rel="shortcut icon" type="image/svg" href="../assets/favicon.ico">
 </head>
@@ -56,7 +56,8 @@
                     <h1 class= "preview__title">Explore the beauty of the World</h1>
                     <p class="preview__subtitle">Receive personalized recommendations for countries,hotels, activities and more</p>
                     <form method="get" class="preview__form">
-                        <input class="form__input" type="text" name="user-input-field" placeholder="What would you like to do?">
+                        <input class="form__input" type="text" name="user-input-field" 
+                               placeholder="What would you like to do?">
                         <button class="button form__button">Start Planning</button>
                     </form>
                 </div>
