--- a/pages/index.html
+++ b/pages/index.html
@@ -66,17 +66,19 @@
         <section class="steps">
             <div class="wrapper">
                 <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
-                <div class="steps_card">
-                    <img src="../assets/svg/frame1.svg" class="card__icon" alt="icon">
-                    <p class="card__text">Tell us what you want to do</p>
-                </div>
-                <div class="steps_card">
-                    <img src="../assets/svg/frame2.svg" class="card__icon" alt="icon">
-                    <p class="card__text">Share us preferable dates</p>
-                </div>
-                <div class="steps_card">
-                    <img src="../assets/svg/frame3.svg" class="card__icon" alt="icon">
-                    <p class="card__text">We will give you recommendations</p>
+                <div class="steps__conteiner">
+                    <div class="steps_card">
+                        <img src="../assets/svg/frame1.svg" class="card__icon" alt="icon">
+                        <p class="card__text">Tell us what you want to do</p>
+                    </div>
+                    <div class="steps_card">
+                        <img src="../assets/svg/frame2.svg" class="card__icon" alt="icon">
+                        <p class="card__text">Share us preferable dates</p>
+                    </div>
+                    <div class="steps_card">
+                        <img src="../assets/svg/frame3.svg" class="card__icon" alt="icon">
+                        <p class="card__text">We will give you recommendations</p>
+                    </div>
                 </div>
             </div>
         </section>
