feat: implemented banner and paginator

--- a/pages/index.html
+++ b/pages/index.html
@@ -65,7 +65,7 @@
         </section>
         <section class="steps">
             <div class="wrapper">
-                <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
+                <h2 class="steps__title title">3 STEPS TO THE PERFECT TRIP</h2>
                 <div class="steps__conteiner">
                     <div class="steps_card">
                         <img src="../assets/svg/frame1.svg" class="card__icon" alt="icon">
@@ -83,8 +83,8 @@
             </div>
         </section>
         <section class="destinations">
-            <div class="wrapper">
-                <h2 class="destinations__title">POPULAR DESTINATIONS</h2>
+            <!-- <div class="wrapper"> -->
+                <h2 class="destinations__title title">POPULAR DESTINATIONS</h2>
                 <div class="destinations__conteiner">
                     <div class="destinations__banner">
                         <div class="banner__content">
@@ -101,23 +101,23 @@
                         </div>
                     </div>
                     <div class="destinations__carousel">
-                        <input id="carousel__item-1" type="radio" name="carousel-dots">
+                        <input class="dots" id="carousel__item-1" type="radio" name="carousel-dots">
                         <label for="carousel__item-1"></label>
-                        <input id="carousel__item-2" type="radio" name="carousel-dots" checked>
+                        <input class="dots" id="carousel__item-2" type="radio" name="carousel-dots" checked>
                         <label for="carousel__item-2"></label>
-                        <input id="carousel__item-3" type="radio" name="carousel-dots"> 
+                        <input class="dots" id="carousel__item-3" type="radio" name="carousel-dots"> 
                         <label for="carousel__item-3"></label>
                     </div>
                 </div>
                 <button class="destinations__button button button__arrow">
                     <img src="../assets/svg/arrow-right.svg" class="arrow" alt="arrow">
-                    Find More
+                    <span>Find More</span>
                 </button>
-            </div>
+            <!-- </div> -->
         </section>
         <section class="stories">
             <div class="wrapper">
-                <h2 class="stories__title">TRAVEL STORIES</h2>
+                <h2 class="stories__title title">TRAVEL STORIES</h2>
                 <div class="stories__gallery"> 
                     <div class="gallery__card">
                         <img src="../assets/img/desktop/desk_stories_1.png" class="gallery__img-deks" alt="10 Photos of Attractive Thailand">
