--- a/pages/index.html
+++ b/pages/index.html
@@ -116,57 +116,63 @@
             <!-- </div> -->
         </section>
         <section class="stories">
-            <div class="wrapper">
-                <h2 class="stories__title title">TRAVEL STORIES</h2>
-                <div class="stories__gallery"> 
-                    <div class="gallery__card">
-                        <img src="../assets/img/desktop/desk_stories_1.png" class="gallery__img-deks" alt="10 Photos of Attractive Thailand">
-                        <div class="gallery__content">
-                            <h3 class="gallery__subtitle">10 Photos of Attractive Thailand</h3>
-                            <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="gallery__link" href="#!">Read More</a>
+            <h2 class="stories__title title">TRAVEL STORIES</h2>
+            <div class="stories__gallery-bg">
+                <div class="stories__gallery-transporent"> 
+                    <div class="wrapper">
+                        <div class="stories__gallery">
+                            <div class="gallery__card">
+                                <img src="../assets/img/desktop/desk_stories_1.png" class="gallery__img-deks" alt="10 Photos of Attractive Thailand">
+                                <div class="gallery__content">
+                                    <h3 class="gallery__subtitle">10 Photos of Attractive Thailand</h3>
+                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <a class="gallery__link" href="#!">Read More</a>
+                                </div>
+                            </div>
+                            <div class="gallery__card">
+                                <img src="../assets/img/desktop/desk_stories_2.png" class="gallery__img-deks" alt="Canyonlands National Park, Utah">
+                                <div class="gallery__content">
+                                    <h3 class="gallery__subtitle">Canyonlands National Park, Utah</h3>
+                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <a class="gallery__link" href="#!">Read More</a>
+                                </div>
+                            </div>
+                            <div class="gallery__card">
+                                <img src="../assets/img/desktop/desk_stories_3.png" class="gallery__img-deks" alt="I left my heart in the Mountains!">
+                                <div class="gallery__content">
+                                    <h3 class="gallery__subtitle">I left my heart in the Mountains!</h3>
+                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <a class="gallery__link" href="#!">Read More</a>
+                                </div>
+                            </div>
+                            <div class="gallery__card">
+                                <img src="../assets/img/desktop/desk_stories_4.png" class="gallery__img-deks" alt="The Longest journey in my life!">
+                                <div class="gallery__content">
+                                    <h3 class="gallery__subtitle">The Longest journey in my life!</h3>
+                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <a class="gallery__link" href="#!">Read More</a>
+                                </div>
+                            </div>
+                            <button class="stories__button button button__arrow">
+                                <img src="../assets/svg/arrow-right.svg" class="arrow" alt="arrow">
+                                See More
+                            </button>
                         </div>
+
+                        
                     </div>
-                    <div class="gallery__card">
-                        <img src="../assets/img/desktop/desk_stories_2.png" class="gallery__img-deks" alt="Canyonlands National Park, Utah">
-                        <div class="gallery__content">
-                            <h3 class="gallery__subtitle">Canyonlands National Park, Utah</h3>
-                            <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="gallery__link" href="#!">Read More</a>
-                        </div>
-                    </div>
-                    <div class="gallery__card">
-                        <img src="../assets/img/desktop/desk_stories_3.png" class="gallery__img-deks" alt="I left my heart in the Mountains!">
-                        <div class="gallery__content">
-                            <h3 class="gallery__subtitle">I left my heart in the Mountains!</h3>
-                            <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="gallery__link" href="#!">Read More</a>
-                        </div>
-                    </div>
-                    <div class="gallery__card">
-                        <img src="../assets/img/desktop/desk_stories_4.png" class="gallery__img-deks" alt="The Longest journey in my life!">
-                        <div class="gallery__content">
-                            <h3 class="gallery__subtitle">The Longest journey in my life!</h3>
-                            <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="gallery__link" href="#!">Read More</a>
-                        </div>
-                    </div>
-                    <button class="stories__button button button__arrow">
-                        <img src="../assets/svg/arrow-right.svg" class="arrow" alt="arrow">
-                        See More
-                    </button>
                 </div>
             </div>
         </section>
