feat: new section and footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -122,53 +122,55 @@
                     <div class="wrapper">
                         <div class="stories__gallery">
                             <div class="gallery__card">
-                                <img src="../assets/img/desktop/desk_stories_1.png" class="gallery__img-deks" alt="10 Photos of Attractive Thailand">
-                                <div class="gallery__content">
-                                    <h3 class="gallery__subtitle">10 Photos of Attractive Thailand</h3>
-                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                    <a class="gallery__link" href="#!">Read More</a>
-                                </div>
+                            <img src="../assets/img/desktop/desk_stories_1.png" class="gallery__img-deks" alt="10 Photos of Attractive Thailand">
+                            <div class="gallery__content">
+                                <h3 class="gallery__subtitle">10 Photos of Attractive Thailand</h3>
+                                <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="gallery__link" href="#!">Read More</a>
                             </div>
-                            <div class="gallery__card">
-                                <img src="../assets/img/desktop/desk_stories_2.png" class="gallery__img-deks" alt="Canyonlands National Park, Utah">
-                                <div class="gallery__content">
-                                    <h3 class="gallery__subtitle">Canyonlands National Park, Utah</h3>
-                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                    <a class="gallery__link" href="#!">Read More</a>
-                                </div>
+                        </div>
+                        <div class="gallery__card">
+                            <img src="../assets/img/desktop/desk_stories_2.png" class="gallery__img-deks" alt="Canyonlands National Park, Utah">
+                            <div class="gallery__content">
+                                <h3 class="gallery__subtitle">Canyonlands National Park, Utah</h3>
+                                <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="gallery__link" href="#!">Read More</a>
                             </div>
-                            <div class="gallery__card">
-                                <img src="../assets/img/desktop/desk_stories_3.png" class="gallery__img-deks" alt="I left my heart in the Mountains!">
-                                <div class="gallery__content">
-                                    <h3 class="gallery__subtitle">I left my heart in the Mountains!</h3>
-                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                    <a class="gallery__link" href="#!">Read More</a>
-                                </div>
+                        </div>
+                        <div class="gallery__card">
+                            <img src="../assets/img/desktop/desk_stories_3.png" class="gallery__img-deks" alt="I left my heart in the Mountains!">
+                            <div class="gallery__content">
+                                <h3 class="gallery__subtitle">I left my heart in the Mountains!</h3>
+                                <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="gallery__link" href="#!">Read More</a>
                             </div>
-                            <div class="gallery__card">
-                                <img src="../assets/img/desktop/desk_stories_4.png" class="gallery__img-deks" alt="The Longest journey in my life!">
-                                <div class="gallery__content">
-                                    <h3 class="gallery__subtitle">The Longest journey in my life!</h3>
-                                    <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                                        sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                    <a class="gallery__link" href="#!">Read More</a>
-                                </div>
+                        </div>
+                        <div class="gallery__card">
+                            <img src="../assets/img/desktop/desk_stories_4.png" class="gallery__img-deks" alt="The Longest journey in my life!">
+                            <div class="gallery__content">
+                                <h3 class="gallery__subtitle">The Longest journey in my life!</h3>
+                                <p class="gallery__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="gallery__link" href="#!">Read More</a>
                             </div>
+                        </div>
+                        <div class="stories__button-conteiner">
                             <button class="stories__button button button__arrow">
                                 <img src="../assets/svg/arrow-right.svg" class="arrow" alt="arrow">
                                 See More
                             </button>
+                        </div>
                         </div>
 
                         
@@ -181,7 +183,6 @@
         <div class="wrapper">
             <div class="footer__conteiner">
                 <p class="footer__title">All Rights Reserved © Travel Portal 2023</p>
-                <div class="footer__social-bloc">
                     <ul class="footer__social-list">
                         <li class="footer__social-item">
                             <a href="https://github.com/volhaf" target="_blank">
@@ -199,7 +200,6 @@
                             </a>
                         </li>
                     </ul>
-                </div>
             </div>
         </div>
     </footer>
