refactor: redesigned the slider

--- a/pages/index.html
+++ b/pages/index.html
@@ -88,7 +88,7 @@
                 <div class="destinations__conteiner">
                     <div class="destinations__banner">
                         <div class="banner__content">
-                            <img src="../assets/img/desktop/desk_destinations_spain.png" class="banner__img-desk" alt="spain">
+                            <img src="../assets/img/desktop/desk_destinations_spain.png" class="banner__img-desk banner__img-left" alt="spain">
                             <div class="banner__subtitle">SPAIN</div>
                         </div>
                         <div class="banner__content">
