refactor: made corrections according to the perfectpixel

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,15 +67,15 @@
             <div class="wrapper">
                 <h2 class="steps__title title">3 STEPS TO THE PERFECT TRIP</h2>
                 <div class="steps__conteiner">
-                    <div class="steps_card">
+                    <div class="steps_card steps_card-1">
                         <img src="../assets/svg/frame1.svg" class="card__icon" alt="icon">
                         <p class="card__text">Tell us what you want to do</p>
                     </div>
-                    <div class="steps_card">
+                    <div class="steps_card steps_card-2">
                         <img src="../assets/svg/frame2.svg" class="card__icon" alt="icon">
                         <p class="card__text">Share us preferable dates</p>
                     </div>
-                    <div class="steps_card">
+                    <div class="steps_card steps_card-3">
                         <img src="../assets/svg/frame3.svg" class="card__icon" alt="icon">
                         <p class="card__text">We will give you recommendations</p>
                     </div>
